app/assets/stylesheets/master.css.scss
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800);
@import url(https://fonts.googleapis.com/css?family=Nixie+One);
@import url(https://fonts.googleapis.com/css?family=Quattrocento:400,700);

::-moz-selection { /* Code for Firefox */
    background: rgba(158, 207, 231, 0.5);
}

::selection { 
    background: rgba(158, 207, 231, 0.5);
}

#user_alert {
    position:fixed;
    top:50px;
    width:100%;
    z-index: 9999;
    height: 50px;
    padding: 13px;
    margin-bottom: 0px;
    border-radius: 0px;
}

#btn-success-id {
  background-color: #275ea3;
  border-color: #275ea3;
}

#btn-success-id:hover {
  background-color: #9ecfe7;
  border-color: #9ecfe7;
}

#btn-success-id:focus {
  background-color: #9ecfe7;
  border-color: #9ecfe7;
}

.hero h1 {
  font-family: 'Open Sans', sans-serif;
  color: #9ecfe7;
  font-size: 5vh;
  font-weight: 700;
  text-shadow: rgba(0,0,0,0.95) 1px 1px;
}

.hero h2 {
  font-family: 'Open Sans', sans-serif;
  color: #fbeee5;
  font-weight: 700;
  font-size: 4vh;
  text-shadow: rgba(0,0,0,0.95) 1px 1px;
}

.hero {
  position: relative;
  text-align: center;
  width:100%;
}

.inner {
  position:absolute;
  top:50%; left:50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 60vh;
}

.box {
  height: 100vh;
}

#nav-link-id {
  margin-top: 7px;
  font-weight: 400;
  font-style: bold;
  color: #275ea3;
}

#nav-link-id:hover {
  color: #9ecfe7;
}

#bs-example-navbar-collapse-1 {
  border-color: #275ea3;
}

#navbar-brand-id {
  margin-top: -10px;
  font: 32px/42px 'Open Sans', sans-serif;
  font-weight: 800;
  text-transform: uppercase;
  color: #275ea3;
  letter-spacing: 1px;
}

#navbar-brand-id:hover {
  color: #9ecfe7;
}

#navbar-toggle-id {
  border-color: transparent;
  background-color: #275ea3;
}

#navbar-toggle-id:hover {
  border-color: transparent;
  background-color: #9ecfe7;
}

#navbar-toggle-id:focus {
  border-color: transparent;
  background-color: #9ecfe7;
}

#icon-bar-id {
  background-color: #000010;
}

.navbar#navbar-id {
  z-index: 9999;
  position: fixed;
  top: 0;
  width: 100%;
  border-radius: 0;
  background-color: #000010;
  border-color: #000010;
}

.spacer {
  height: 30px;
  width: 100%;
  margin-top: 0;
  margin-bottom: 0;
}

.hero {
  // background:url('hero.jpg') no-repeat center center fixed;
  background-color: #000010;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.box1 {
  background-color: #275ea3;
}

// .box2 {
  // background-color: #fbeee5;
// }

.box3 {
  background-color: #9ecfe7;
}

.box4 {
  background-color: #4b5354;
}

// .box5 {
  // background-color: #07223d;
// }

